refactor(tests): update assertions in ExerciseServiceTest and WorkoutServiceTest to use getFirst() for collections